jupyter files update

--- a/1.data_collection.ipynb
+++ b/1.data_collection.ipynb
@@ -9,10 +9,27 @@
    "source": [
     "from jetcam.usb_camera import USBCamera\n",
     "from jetcam.csi_camera import CSICamera\n",
-    "\n",
-    "\n",
+    "import torchvision.transforms as transforms\n",
+    "from dataset import ImageClassificationDataset\n",
+    "import ipywidgets\n",
+    "import traitlets\n",
+    "from IPython.display import display\n",
+    "from jetcam.utils import bgr8_to_jpeg\n",
+    "import ipywidgets\n",
+    "import traitlets\n",
+    "from IPython.display import display\n",
+    "from jetcam.utils import bgr8_to_jpeg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1f64b24-b6bc-4cb9-9a03-23d28de1977b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Camera\n",
     "camera = CSICamera(width=300, height=300, capture_device=0)\n",
-    "\n",
     "camera.running = True\n",
     "print(\"camera created\")"
    ]
@@ -24,21 +41,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torchvision.transforms as transforms\n",
-    "from dataset import ImageClassificationDataset\n",
+    "# Categories and Dataset\n",
     "\n",
     "CATEGORIES = ['background', 'maya', 'neg_basil', 'neg_coco', 'pos_chain', 'pos_cluster']\n",
     "DATASETS = ['gram_stain']\n",
-    "\n",
     "TRANSFORMS = transforms.Compose([\n",
     "    transforms.Resize((300, 300)),\n",
     "    transforms.ToTensor(),\n",
     "])\n",
-    "\n",
     "datasets = {}\n",
     "for name in DATASETS:\n",
     "    datasets[name] = ImageClassificationDataset(name, CATEGORIES, TRANSFORMS)\n",
-    "    \n",
     "print(\"{} categories defined\".format(CATEGORIES))"
    ]
   },
@@ -49,14 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipywidgets\n",
-    "import traitlets\n",
-    "from IPython.display import display\n",
-    "from jetcam.utils import bgr8_to_jpeg\n",
-    "\n",
+    "# Data Collection Widget\n",
     "dataset = datasets[DATASETS[0]]\n",
     "camera.unobserve_all()\n",
-    "\n",
     "camera_widget = ipywidgets.Image()\n",
     "traitlets.dlink((camera, 'value'), (camera_widget, 'value'), transform=bgr8_to_jpeg)\n",
     "\n",
@@ -84,7 +92,6 @@
     "data_collection_widget = ipywidgets.VBox([\n",
     "    ipywidgets.HBox([camera_widget]), dataset_widget, category_widget, count_widget, save_widget\n",
     "])\n",
-    "\n",
     "\n",
     "print(\"data_collection_widget created\")"
    ]
