--- a/2.training.ipynb
+++ b/2.training.ipynb
@@ -11,7 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##################################\n",
+    "## for the first time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 -m pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -57,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -76,26 +104,7 @@
     "id": "fN03CjAEyPIC",
     "outputId": "7a53161d-e6ac-43a8-9246-b89e0e68d972"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------------------------------------\n",
-      "TRAIN\n",
-      "--------------------------------------------------\n",
-      "Number of Background \t\t: 10\n",
-      "Number of Maya \t\t\t: 10\n",
-      "Number of Negative Basil\t: 10\n",
-      "Number of Negative Coco\t\t: 11\n",
-      "Number of Positive Chain\t: 10\n",
-      "Number of Positive Cluster\t: 10\n",
-      "--------------------------------------------------\n",
-      "\t\t\tTOTAL \t: 61\n",
-      "--------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path_train = Path('gram_stain/')\n",
     "train_fnames = get_image_files(path_train)\n",
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -134,93 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>filepath</th>\n",
-       "      <th>fold</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>maya</td>\n",
-       "      <td>gram_stain/maya/e83b3a4c-3472-11ee-8605-48b02dd3da7b.jpg</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>pos_cluster</td>\n",
-       "      <td>gram_stain/pos_cluster/f546b126-3472-11ee-8605-48b02dd3da7b.jpg</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>neg_basil</td>\n",
-       "      <td>gram_stain/neg_basil/ea986832-3472-11ee-8605-48b02dd3da7b.jpg</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>maya</td>\n",
-       "      <td>gram_stain/maya/e8cbf87a-3472-11ee-8605-48b02dd3da7b.jpg</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>background</td>\n",
-       "      <td>gram_stain/background/e50585da-3472-11ee-8605-48b02dd3da7b.jpg</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         label  \\\n",
-       "0         maya   \n",
-       "1  pos_cluster   \n",
-       "2    neg_basil   \n",
-       "3         maya   \n",
-       "4   background   \n",
-       "\n",
-       "                                                          filepath  fold  \n",
-       "0         gram_stain/maya/e83b3a4c-3472-11ee-8605-48b02dd3da7b.jpg     2  \n",
-       "1  gram_stain/pos_cluster/f546b126-3472-11ee-8605-48b02dd3da7b.jpg     2  \n",
-       "2    gram_stain/neg_basil/ea986832-3472-11ee-8605-48b02dd3da7b.jpg     2  \n",
-       "3         gram_stain/maya/e8cbf87a-3472-11ee-8605-48b02dd3da7b.jpg     1  \n",
-       "4   gram_stain/background/e50585da-3472-11ee-8605-48b02dd3da7b.jpg     0  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "filepath_list = glob.glob('gram_stain/*/*.jpg')\n",
     "labels = [str(filepath_list[i]).split(\"/\")[-2] for i in range(len(filepath_list))]\n",
@@ -252,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +191,7 @@
     "                       splitter=IndexSplitter(train_df_fold),\n",
     "                       get_x=ColReader('filepath'),\n",
     "                       get_y=ColReader('label'),\n",
-    "                       item_tfms=Resize(300, method=\"squish\"),\n",
+    "                       item_tfms=Resize(224, method=\"squish\"),\n",
     "                       batch_tfms=augs_train,\n",
     "                       )\n",
     "    dls = dblock.dataloaders(train_df, bs=2)\n",
@@ -280,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -294,148 +221,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       "    /* Turns off some styling */\n",
-       "    progress {\n",
-       "        /* gets rid of default border in Firefox and Opera. */\n",
-       "        border: none;\n",
-       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "        background-size: auto;\n",
-       "    }\n",
-       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
-       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
-       "    }\n",
-       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "        background: #F44336;\n",
-       "    }\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: left;\">\n",
-       "      <th>epoch</th>\n",
-       "      <th>train_loss</th>\n",
-       "      <th>valid_loss</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>3.122701</td>\n",
-       "      <td>5.117309</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>01:26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>3.156076</td>\n",
-       "      <td>9.934793</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>00:14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>3.255619</td>\n",
-       "      <td>8.288945</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>00:15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>3.018598</td>\n",
-       "      <td>3.020062</td>\n",
-       "      <td>0.076923</td>\n",
-       "      <td>00:14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>3.175947</td>\n",
-       "      <td>2.633605</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>00:14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>2.922782</td>\n",
-       "      <td>2.763947</td>\n",
-       "      <td>0.076923</td>\n",
-       "      <td>00:15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>2.882091</td>\n",
-       "      <td>2.839972</td>\n",
-       "      <td>0.076923</td>\n",
-       "      <td>00:14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>2.981508</td>\n",
-       "      <td>2.801339</td>\n",
-       "      <td>0.076923</td>\n",
-       "      <td>00:15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>3.004668</td>\n",
-       "      <td>2.386480</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>00:14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>2.890116</td>\n",
-       "      <td>2.410639</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>00:15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Better model found at epoch 0 with valid_loss value: 5.117309093475342.\n",
-      "Better model found at epoch 3 with valid_loss value: 3.020061731338501.\n",
-      "Better model found at epoch 4 with valid_loss value: 2.633605480194092.\n",
-      "Epoch 7: reducing lr to 1.7197876422966228e-06\n",
-      "Better model found at epoch 8 with valid_loss value: 2.386479616165161.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for f_i in np.arange(0, 1, 1):\n",
     "    dls = get_data(f_i)\n",
     "    learner_cnn = cnn_learner(dls, models.mobilenet_v2, cut=-1, pretrained=False, normalize=True, loss_func=CrossEntropyLossFlat(), opt_func=Adam, metrics=[accuracy] )\n",
-    "    #learner_cnn = cnn_learner(dls, xresnet50, normalize=True, n_out=len(dls.vocab), loss_func=CrossEntropyLossFlat(), opt_func=Adam, metrics=[accuracy])\n",
-    "    \n",
     "    learner_cnn.fit_one_cycle(epoch, lr_max=learn_rate,\n",
     "                                cbs=[\n",
     "                                    SaveModelCallback(monitor='valid_loss', min_delta=0.0001, fname=\"mobilenet_fold_\" +str(f_i)),\n",
@@ -446,14 +238,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "# EVALUATION"
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "raw",
