dataset and code files

--- a/3.prediction.ipynb
+++ b/3.prediction.ipynb
@@ -113,7 +113,7 @@
     "                       splitter=IndexSplitter(train_df_fold),\n",
     "                       get_x=ColReader('filepath'),\n",
     "                       get_y=ColReader('label'),\n",
-    "                       item_tfms=Resize(300, method=\"squish\"),\n",
+    "                       item_tfms=Resize(224, method=\"squish\"),\n",
     "                       batch_tfms=augs_train,\n",
     "                       )\n",
     "    dls = dblock.dataloaders(train_df, bs=2)\n",
@@ -155,10 +155,7 @@
     "            \n",
     "def start_live(change):\n",
     "    dls = get_data(0)\n",
-    "    learner_cnn = cnn_learner(dls, models.mobilenet_v2, cut=-1, normalize=True, loss_func=CrossEntropyLossFlat(), opt_func=Adam, metrics=[accuracy] ).load('xresnet18_fold_0')\n",
-    "    #learner_cnn = cnn_learner(dls, xresnet50, normalize=True, loss_func=CrossEntropyLossFlat(), opt_func=Adam, metrics=[accuracy] ).load('xresnet50')\n",
-    "    \n",
-    "    \n",
+    "    learner_cnn = cnn_learner(dls, models.mobilenet_v2, cut=-1, normalize=True, loss_func=CrossEntropyLossFlat(), opt_func=Adam, metrics=[accuracy] ).load('mobilenet_fold_0')\n",
     "    if change['new'] == 'live':\n",
     "        execute_thread = threading.Thread(target=live, args=(state_widget, dls, learner_cnn, camera, prediction_widget))\n",
     "        execute_thread.start()\n",
@@ -197,14 +194,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7c32462-0eb5-4525-8847-1289fa732479",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "bf1485bb-fba7-49af-8116-3ae285dc57e7",
    "metadata": {},
    "outputs": [],
@@ -236,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -250,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
