--- a/1.data_collection.ipynb
+++ b/1.data_collection.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# Camera\n",
-    "camera = CSICamera(width=300, height=300, capture_device=0)\n",
+    "camera = CSICamera(width=224, height=224, capture_device=0)\n",
     "camera.running = True\n",
     "print(\"camera created\")"
    ]
@@ -42,11 +42,10 @@
    "outputs": [],
    "source": [
     "# Categories and Dataset\n",
-    "\n",
     "CATEGORIES = ['background', 'maya', 'neg_basil', 'neg_coco', 'pos_chain', 'pos_cluster']\n",
     "DATASETS = ['gram_stain']\n",
     "TRANSFORMS = transforms.Compose([\n",
-    "    transforms.Resize((300, 300)),\n",
+    "    transforms.Resize((224, 224)),\n",
     "    transforms.ToTensor(),\n",
     "])\n",
     "datasets = {}\n",
@@ -109,6 +108,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a137751a-c393-4ad0-84af-f4428a3ee5df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e48fa339-f7b2-481a-a8ad-ca12bd8003a6",
    "metadata": {},
    "outputs": [],
@@ -132,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
