--- a/2.training.ipynb
+++ b/2.training.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "##################################\n",
-    "## for the first time"
+    "################## for the first time ################"
    ]
   },
   {
@@ -35,6 +36,17 @@
    "outputs": [],
    "source": [
     "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "######################################################"
    ]
   },
   {
@@ -151,10 +163,8 @@
    "source": [
     "filepath_list = glob.glob('gram_stain/*/*.jpg')\n",
     "labels = [str(filepath_list[i]).split(\"/\")[-2] for i in range(len(filepath_list))]\n",
-    "\n",
     "filepath = pd.Series(filepath_list, name='filepath').astype(str)\n",
     "label = pd.Series(labels, name='label')\n",
-    "\n",
     "train_df = pd.concat([label, filepath], axis=1)\n",
     "train_df = train_df.sample(frac=1, random_state=0).reset_index(drop=True)\n",
     "\n",
@@ -242,182 +252,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
    "source": [
-    "## imports"
+    "print(\"Training fnished\")"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "from jetcam.csi_camera import CSICamera\n",
-    "import ipywidgets\n",
-    "import traitlets\n",
-    "from IPython.display import display\n",
-    "from jetcam.utils import bgr8_to_jpeg"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "## camera"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "camera = CSICamera(width=300, height=300, capture_device=0)\n",
-    "camera.running = True\n",
-    "print(\"camera created\")"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "## camera_widget"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "camera.unobserve_all()\n",
-    "camera_widget = ipywidgets.Image()\n",
-    "traitlets.dlink((camera, 'value'), (camera_widget, 'value'), transform=bgr8_to_jpeg)\n",
-    "camera_view_widget = ipywidgets.VBox([\n",
-    "    ipywidgets.HBox([camera_widget])\n",
-    "])\n",
-    "print(\"camera_view_widget created\")"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "## model"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "dls = get_data(0)\n",
-    "learner_cnn = cnn_learner(dls, models.mobilenet_v2, cut=-1, normalize=True, loss_func=CrossEntropyLossFlat(), opt_func=Adam, metrics=[accuracy] ).load('xresnet18_fold_0')"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "with torch.no_grad():\n",
-    "    image = camera.value\n",
-    "    image_, = first(dls.test_dl([image]))\n",
-    "    image_ = TensorImage(dls.train.decode((image_,))[0][0])\n",
-    "    tani_, tani_id, prob_list_ = learner_cnn.predict(image_)\n",
-    "    print(tani_)\n",
-    "    print(prob_list_)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "## live_execution_widget"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "import threading\n",
-    "import time\n",
-    "import torch.nn.functional as F\n",
-    "import torch\n",
-    "\n",
-    "state_widget = ipywidgets.ToggleButtons(options=['stop', 'live'], description='state', value='stop')\n",
-    "prediction_widget = ipywidgets.Text(description='prediction')\n",
-    "\n",
-    "def live(state_widget, datal, model, camera, prediction_widget):\n",
-    "    while state_widget.value == 'live':\n",
-    "        image = camera.value\n",
-    "        \n",
-    "        with torch.no_grad():\n",
-    "            image_, = first(datal.test_dl([image]))\n",
-    "            image_ = TensorImage(datal.train.decode((image_,))[0][0])\n",
-    "            tani_, tani_id, prob_list_ = model.predict(image_)\n",
-    "            prediction_widget.value = tani_\n",
-    "            \n",
-    "def start_live(change):\n",
-    "    dls = get_data(0)\n",
-    "    learner_cnn = cnn_learner(dls, models.mobilenet_v2, cut=-1, normalize=True, loss_func=CrossEntropyLossFlat(), opt_func=Adam, metrics=[accuracy] ).load('xresnet18_fold_0')\n",
-    "    #learner_cnn = cnn_learner(dls, xresnet50, normalize=True, loss_func=CrossEntropyLossFlat(), opt_func=Adam, metrics=[accuracy] ).load('xresnet50')\n",
-    "    \n",
-    "    \n",
-    "    if change['new'] == 'live':\n",
-    "        execute_thread = threading.Thread(target=live, args=(state_widget, dls, learner_cnn, camera, prediction_widget))\n",
-    "        execute_thread.start()\n",
-    "\n",
-    "state_widget.observe(start_live, names='value')\n",
-    "\n",
-    "live_execution_widget = ipywidgets.VBox([\n",
-    "    prediction_widget,\n",
-    "    state_widget\n",
-    "])\n",
-    "print(\"live_execution_widget created\")"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "all_widget = ipywidgets.VBox([\n",
-    "    ipywidgets.HBox([camera_view_widget, live_execution_widget]), \n",
-    "])\n",
-    "\n",
-    "display(all_widget)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "import os\n",
-    "import IPython\n",
-    "if type(camera) is CSICamera:\n",
-    "    print(\"Ignore 'Exception in thread' tracebacks\\n\")\n",
-    "    camera.cap.release()\n",
-    "os._exit(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -435,7 +272,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
